[gd_scene load_steps=6 format=3 uid="uid://b0f3ex8esa0vj"]

[ext_resource type="Texture2D" uid="uid://b5cqp64nkv5bn" path="res://assets/ui/ui-tileset.png" id="1_8wfqe"]
[ext_resource type="Script" uid="uid://y2gjm6dfacju" path="res://scripts/ui/settings.gd" id="1_h175o"]
[ext_resource type="PackedScene" uid="uid://ftjx2ufw3bdy" path="res://scenes/ui/select.tscn" id="2_7pacj"]

[sub_resource type="AtlasTexture" id="AtlasTexture_7pacj"]
atlas = ExtResource("1_8wfqe")
region = Rect2(0, 16, 16, 16)

[sub_resource type="LabelSettings" id="LabelSettings_vrkq3"]
font_size = 30

[node name="settings" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_h175o")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -81.0
offset_top = -45.0
offset_right = 86.0
offset_bottom = 43.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("AtlasTexture_7pacj")

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.09900001
anchor_right = 0.5
anchor_bottom = 0.09900001
offset_left = -37.0
offset_top = -10.152008
offset_right = 37.0
offset_bottom = 12.847992
grow_horizontal = 2
text = "settings"
label_settings = SubResource("LabelSettings_vrkq3")

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.563
anchor_right = 0.5
anchor_bottom = 0.563
offset_left = -168.0
offset_top = -180.824
offset_right = 160.0
offset_bottom = 177.176
grow_horizontal = 2
grow_vertical = 2

[node name="fullscreen" parent="VBox" instance=ExtResource("2_7pacj")]
custom_minimum_size = Vector2(250, 50)
layout_mode = 2
size_flags_horizontal = 8
options = Array[String](["fullscreen", "windowed"])

[node name="volume" type="HBoxContainer" parent="VBox"]
layout_mode = 2

[node name="Label" type="Label" parent="VBox/volume"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "volume"

[node name="volume_slider" type="HSlider" parent="VBox/volume"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
max_value = 1.0
step = 0.05
value = 1.0

[node name="language" parent="VBox" instance=ExtResource("2_7pacj")]
custom_minimum_size = Vector2(250, 50)
layout_mode = 2
size_flags_horizontal = 8
options = Array[String](["English", "Polish"])

[node name="back_to_menu" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.80700004
anchor_right = 0.5
anchor_bottom = 0.80700004
offset_left = -74.5
offset_top = 0.063964844
offset_right = 74.5
offset_bottom = 45.063965
grow_horizontal = 2
grow_vertical = 0
text = "back to menu"

[connection signal="value_changed" from="VBox/volume/volume_slider" to="." method="_on_volume_slider_value_changed"]
[connection signal="pressed" from="back_to_menu" to="." method="_on_back_to_menu_pressed"]
